--- a/app/src/main/res/layout/home_question_investigation.xml
+++ b/app/src/main/res/layout/home_question_investigation.xml
@@ -32,7 +32,7 @@
             android:scaleType="fitEnd" />
     </TableRow>
 
-    <TableRow android:layout_weight="0.7">
+    <TableRow android:layout_weight="0.6">
 
         <ImageView
             android:id="@+id/imageview10"
@@ -43,6 +43,18 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:scaleType="fitCenter" />
+    </TableRow>
+    <TableRow android:layout_weight="0.1">
+        <TextView
+            android:id="@+id/textview2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_span="8"
+            android:adjustViewBounds="true"
+            android:padding="5dp"
+            android:layout_gravity="center|center_vertical"
+            android:textColor="#FF0000"
+            android:textSize="20sp" />
     </TableRow>
     <TableRow
         android:layout_weight="2">
@@ -126,6 +138,14 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:layout_span="2"
+            android:scaleType="fitCenter"
+            />
+        <ImageView
+            android:id="@+id/next_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:layout_span="1"
             android:scaleType="fitCenter"
             />
     </TableRow>
