--- a/app/src/main/res/layout/home_selected_investigation.xml
+++ b/app/src/main/res/layout/home_selected_investigation.xml
@@ -112,6 +112,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_eye"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
@@ -119,7 +120,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/text_problem"
+                    android:id="@+id/select_problem_eye"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -129,32 +130,390 @@
                     android:textSize="20sp" />
 
                 <CheckBox
-                    android:id="@+id/check1_1"
+                    android:id="@+id/select_problem_eye_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="눈이 건조하여 뻑뻑하고 가려움을 느껴요." />
+
+               <CheckBox
+                    android:id="@+id/select_problem_eye_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="눈 주변이 떨리는 현상이 있어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_eye_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="핸드폰이나 컴퓨터를 본 후에 시야가 흐릿하게 느껴져요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_eye_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="어두워지면 시력이 저하돼요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_brain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_brain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_brain_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="기억력이 떨어진다고 느껴져요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_brain_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="두통이 자주 생겨요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_brain_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="불안 혹은 긴장감을 자주 느껴요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_brain_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="우울한 감정을 자주 느껴요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_tired"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_tired"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_tired_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="무기력하고 식욕이 없어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_tired_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="자고 일어나도 아침부터 피곤해요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_tired_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="신경이 예민하고 잠을 이루기 힘들어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_tired_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="잠을 매우 잘 자요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_bone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_bone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_bone_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="뼈가 부러져 본 경험이 있어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_bone_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="평소 뼈가 약한 느낌 또는 증상이 있어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_bone_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="스테로이드를 3개월 이상 섭취한 경험이 있어요." />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_immune"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_immune"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_immune_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="스트레스가 매우 많아요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_immune_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="아토피 또는 비염 등 알레르기 질환이 있어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_immune_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="감기와 같은 감염성 질환에 자주 걸려요." />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_hair"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_hair"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_hair_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="탈모가 진행되고 있거나 탈모가 걱정돼요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_hair_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="머리카락이 갈라지고 끊어지는 등 모발 상태가 나빠요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_hair_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="같은 또래보다 새치가 많이 나요." />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_rotation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_rotation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_rotation_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
                     android:text="상처가 생기면 잘 아물지 않아요." />
 
                 <CheckBox
-                    android:id="@+id/check1_2"
+                    android:id="@+id/select_problem_rotation_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
                     android:text="손끝 또는 발 끝이 자주 저려요." />
 
                 <CheckBox
-                    android:id="@+id/check1_3"
+                    android:id="@+id/select_problem_rotation_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
                     android:text="혈압이 높아요.(140 / 90 이상)" />
 
                 <CheckBox
-                    android:id="@+id/check1_4"
+                    android:id="@+id/select_problem_rotation_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
                     android:text="충치가 생기고 잇몸이 자주 붓고 피가 나요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_digestion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_digestion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_digestion_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="복통이나 속 쓰림이 자주 발생해요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_digestion_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="변비가 있어요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_digestion_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="설사와 같은 묽은 변을 자주 보는 편이에요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_digestion_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="술을 마실 때 얼굴이나 몸이 붉어지고 소화가 안돼요." />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_skin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/select_problem_skin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:text="해당 하는 증상을 모두 선택하세요."
+                    android:textColor="#4E4848"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/select_problem_skin_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="피부가 건조하여 벗겨지거나 머리에 비듬이 많이 생겨요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_skin_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="피부에 염증이 자주 생겨요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_skin_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="피부에 여드름이나 트러블이 자주 생겨요." />
+
+                <CheckBox
+                    android:id="@+id/select_problem_skin_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
+                    android:text="입안이 헐고 입술이 자주 갈라져요." />
             </LinearLayout>
 
             <LinearLayout
