--- a/app/src/main/res/layout/pill_check.xml
+++ b/app/src/main/res/layout/pill_check.xml
@@ -49,7 +49,7 @@
         <ImageView
             android:id="@+id/imageview2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -64,7 +64,7 @@
         <ImageView
             android:id="@+id/imageview3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scaleType="fitCenter"
              />
     </LinearLayout>
@@ -72,11 +72,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="3">
         <ImageView
             android:id="@+id/imageview4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:scaleType="fitCenter"
              />
     </LinearLayout>
@@ -84,13 +87,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="2">
         <ImageView
             android:id="@+id/imageview5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:scaleType="fitCenter"
              />
     </LinearLayout>
-
 </LinearLayout>
