--- a/app/src/main/res/layout/home_recommend_pill_add1.xml
+++ b/app/src/main/res/layout/home_recommend_pill_add1.xml
@@ -80,8 +80,8 @@
             android:id="@+id/textlink1"
             android:textSize="17sp"
             android:linksClickable="true"
+            android:textColorLink="@color/colorAccent"
             android:autoLink="web"
-            android:textColor="#000000"
             />
 
         <TextView
@@ -120,8 +120,8 @@
             android:id="@+id/textlink2"
             android:textSize="17sp"
             android:linksClickable="true"
+            android:textColorLink="@color/colorAccent"
             android:autoLink="web"
-            android:textColor="#000000"
             />
     </LinearLayout>
 
