--- a/app/src/main/res/layout/home_recommend_pill_add3.xml
+++ b/app/src/main/res/layout/home_recommend_pill_add3.xml
@@ -79,9 +79,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textlink1"
             android:textSize="17sp"
-            android:linksClickable="true"
-            android:autoLink="web"
-            android:textColor="#000000"
+            android:textColorLink="@color/colorAccent"
             />
 
         <TextView
@@ -119,9 +117,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textlink2"
             android:textSize="17sp"
-            android:linksClickable="true"
-            android:autoLink="web"
-            android:textColor="#000000"
+            android:textColorLink="@color/colorAccent"
             />
     </LinearLayout>
 
