--- a/app/src/main/res/layout/home_result_investigation.xml
+++ b/app/src/main/res/layout/home_result_investigation.xml
@@ -12,13 +12,18 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:paddingTop="40dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         >
         <TextView
             android:id="@+id/result_textview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center_vertical"
+            android:textSize="30sp"
+            android:color="#000000"
             ></TextView>
 
 
@@ -28,28 +33,34 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="3"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         >
         <TextView
             android:id="@+id/first_result"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:textSize="20sp"
+            android:textColor="@color/colorOrange"
             />
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4">
-        </TextView>
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            />
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="16">
+            android:layout_height="0dp"
+            android:layout_weight="16"
+            android:background="@color/colorLittlePink"
+            >
             <TextView
                 android:id="@+id/first_result2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:textColor="#000000"
                 ></TextView>
         </ScrollView>
 
@@ -69,28 +80,33 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="3"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         >
         <TextView
             android:id="@+id/second_result"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="8"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:textSize="20sp"
+            android:textColor="@color/colorOrange"
             />
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4">
-        </TextView>
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            />
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="16">
+            android:layout_height="0dp"
+            android:layout_weight="16"
+            android:background="@color/colorLittlePink">
             <TextView
                 android:id="@+id/second_result2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:padding="15dp"
                 ></TextView>
         </ScrollView>
     </LinearLayout>
@@ -99,12 +115,26 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         >
         <TextView
+            android:id="@+id/textlink1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="17sp"
+            android:gravity="center_vertical"
+            android:textColorLink="@color/colorAccent"
+            ></TextView>
+        <TextView
+            android:id="@+id/textlink2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="17sp"
+            android:gravity="center_vertical"
+            android:textColorLink="@color/colorAccent"
             ></TextView>
     </LinearLayout>
 </LinearLayout>
