--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="transparent">#00000000 </color>
+    <color name="colorOrange">#FFBB00</color>
+    <color name="colorLittlePink">#FFD8D8</color>
 </resources>
