--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -13,20 +13,23 @@
         android:gravity ="center"
         android:fillViewport="true"
         android:layout_marginTop="0dp"
+        android:layout_weight="1"
         android:id="@+id/scrollView2">
 
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/layout"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <LinearLayout
                 android:id="@+id/layout_horizon"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:orientation="vertical"
-                android:layout_gravity="right">
+                android:layout_gravity="right"
+                android:layout_weight="1">
 
                 <ImageView
                     android:id="@+id/imageview3"
@@ -38,27 +41,30 @@
                     />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textview"
+            <ImageView
+                android:id="@+id/image_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_height="0dp"
+                android:layout_margin="0dp"
                 android:layout_gravity="center|center_vertical"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                android:scaleType="fitCenter"
+                android:layout_weight="2"/>
 
             <ImageView
                 android:id="@+id/imageview"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:adjustViewBounds="true"
-                android:layout_margin="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_weight="5"
                 android:scaleType="fitCenter" />
 
             <ImageView
                 android:id="@+id/imageview2"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter" />
 
