--- a/app/src/main/res/layout/pill_check.xml
+++ b/app/src/main/res/layout/pill_check.xml
@@ -46,14 +46,16 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="1">
-        <ImageView
-            android:id="@+id/imageview2"
+        <TextView
+            android:id="@+id/textview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:scaleType="fitCenter"
+            android:textSize="25sp"
+            android:textColor="#000000"
+            android:gravity="center_horizontal"
             />
     </LinearLayout>
     <LinearLayout
