Change button name in profile_activity

--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -159,7 +159,7 @@
             android:layout_weight="2"
             android:background="@android:color/holo_blue_bright"
             android:gravity="center"
-            android:text="확인"
+            android:text="적용하기"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </LinearLayout>
